this should fix the yes/no layout issue

--- a/src/app/(shadcn)/globals.css
+++ b/src/app/(shadcn)/globals.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ 
+
+
+.sd-boolean--checked.sd-boolean--exchanged .sd-boolean__thumb {
+  margin-left: unset !important;
+}
 
 @layer base {
   :root {
